--- a/bike-rental-app/package.json
+++ b/bike-rental-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bike-rental-app",
-  "private": true,
+  "homepage": "https://abdulsamman.github.io/Bike-Rental-App/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
