--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "bike-rental-app",
+  "_comment": "https://gitname.github.io/react-gh-pages",
   "homepage": "https://abdulsamman.github.io/Bike-Rental-App/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview",
+    "clean": "rm -rf build",
+    "publish": "gh-pages -d build",
+    "deploy": "run-s clean build publish"
   },
   "dependencies": {
     "gh-pages": "^4.0.0",
