--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "bike-rental-app",
-  "_comment": "https://gitname.github.io/react-gh-pages",
-  "homepage": "https://abdulsamman.github.io/Bike-Rental-App/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "clean": "rm -rf build",
-    "publish": "gh-pages -d build",
-    "deploy": "run-s clean build publish"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "gh-pages": "^4.0.0",
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,5 +18,18 @@
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "vite": "^3.2.0"
-  }
+  },
+  "description": "``` npm i npm run dev ```",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AbdulSamman/Bike-Rental-App.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AbdulSamman/Bike-Rental-App/issues"
+  },
+  "homepage": "https://github.com/AbdulSamman/Bike-Rental-App#readme"
 }
